# potluck

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRD.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile.db
scripts/: init-db.sql  setup-hooks.sh  setup.sh
src/potluck/: __init__.py  __main__.py
src/potluck/core/: __init__.py  celery.py  cli.py  config.py  exceptions.py  logging.py
src/potluck/db/: __init__.py  migration.py  session.py
src/potluck/ingesters/: __init__.py  base.py  coordinator.py  discover.py  hooks.py  registry.py  tasks.py
src/potluck/ingesters/utils/: __init__.py  archive.py  dedup.py  parsers.py  progress.py
src/potluck/mcp/: server.py
src/potluck/models/: __init__.py  base.py  browsing.py  calendar.py  email.py  events.py  financial.py  links.py  locations.py  media.py  messages.py  notes.py  people.py  social.py  sources.py  tags.py  utils.py
src/potluck/web/: app.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_e2e_setup.py
tests/unit/: __init__.py  test_cli.py  test_core.py  test_ingesters.py  test_models.py  test_phase2_models.py
